--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "type": "module",
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "jsdom": "^24.0.0",
+    "mocha": "^10.3.0"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
