--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "type": "module",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "@babel/preset-env": "^7.23.9",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "jsdom": "^24.0.0",
-    "mocha": "^10.3.0"
+    "jest": "^29.7.0",
+    "jsdom": "^24.0.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "jest"
   }
 }
